--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
   "crates/nbx-wallet",
   "crates/nbx-crypto",
+  "crates/nbx-nockchain-math",
 ]
 
 resolver = "2"
@@ -16,7 +17,10 @@ path = "crates/nbx-wallet"
 [workspace.dependencies.nbx-crypto]
 path = "crates/nbx-crypto"
 
+[workspace.dependencies.nbx-nockchain-math]
+path = "crates/nbx-nockchain-math"
+
 [workspace.dependencies]
 nockvm = { git = "https://github.com/zorp-corp/nockchain.git" }
 nockchain-math = { git = "https://github.com/zorp-corp/nockchain.git" }
-ibig = { git = "https://github.com/zorp-corp/nockchain.git" }
+ibig = "0.3"
