--- a/crates/nbx-crypto/Cargo.toml
+++ b/crates/nbx-crypto/Cargo.toml
@@ -3,11 +3,25 @@ name = "nbx-crypto"
 version.workspace = true
 edition.workspace = true
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
-nockchain-math = { workspace = true }
+nbx-nockchain-math = { workspace = true }
 ibig = { workspace = true }
-bip39 = "2.0"
-argon2 = "0.5"
+bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
+argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
 hmac = "0.12"
 sha2 = "0.10"
-bs58 = "0.5"
+bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
+wasm-bindgen = { version = "0.2", optional = true }
+js-sys = { version = "0.3", optional = true }
+serde = { version = "1.0", features = ["derive"] }
+serde-wasm-bindgen = { version = "0.6", optional = true }
+
+[features]
+default = []
+wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen"]
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+getrandom = { version = "0.2", features = ["js"] }
