--- a/crates/nbx-crypto/Cargo.toml
+++ b/crates/nbx-crypto/Cargo.toml
@@ -7,7 +7,7 @@ edition.workspace = true
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-nbx-nockchain-math = { workspace = true }
+nbx-ztd = { workspace = true }
 ibig = { workspace = true }
 bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
 argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
