--- a/crates/nbx-ztd/Cargo.toml
+++ b/crates/nbx-ztd/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "nbx-nockchain-math"
-version = "0.1.0"
-edition = "2021"
+name = "nbx-ztd"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
