Add NounHashable and nbx-nockchain-types

--- a/crates/nbx-crypto/Cargo.toml
+++ b/crates/nbx-crypto/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 nbx-ztd = { workspace = true }
+nbx-ztd-derive = { path = "../nbx-ztd-derive" }
 ibig = { workspace = true }
 bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
 argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
