--- a/crates/nbx-nockchain-types/Cargo.toml
+++ b/crates/nbx-nockchain-types/Cargo.toml
@@ -11,6 +11,17 @@ bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"]
 nbx-crypto = { path = "../nbx-crypto" }
 serde = { version = "1.0", features = ["derive"], default-features = false }
 thiserror = "2.0"
+ibig = { workspace = true }
+wasm-bindgen = { version = "0.2", optional = true }
+js-sys = { version = "0.3", optional = true }
+serde-wasm-bindgen = { version = "0.6", optional = true }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+getrandom = { version = "0.2", features = ["js"] }
+
+[features]
+default = []
+wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen", "nbx-crypto/wasm"]
 
 [lib]
 crate-type = ["cdylib", "rlib"]
