--- a/crates/nbx-ztd/Cargo.toml
+++ b/crates/nbx-ztd/Cargo.toml
@@ -10,6 +10,7 @@ ibig = { workspace = true }
 once_cell = "1.21"
 arrayref = "0.3"
 num-traits = { version = "0.2", default-features = false }
+serde = { version = "1.0", features = ["derive"], default-features = false }
 
 [features]
 default = ["std"]
