--- a/crates/iris-grpc-proto/Cargo.toml
+++ b/crates/iris-grpc-proto/Cargo.toml
@@ -19,7 +19,7 @@ prost-types = "0.13"
 tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"] }
 thiserror = "2.0"
 bip39 = "2.2.0"
-serde = { version = "1.0", features = ["derive"] }
+serde = { workspace = true }
 ibig = { workspace = true }
 iris-crypto = { path = "../iris-crypto" }
 
