--- a/crates/iris-nockchain-types/Cargo.toml
+++ b/crates/iris-nockchain-types/Cargo.toml
@@ -17,7 +17,7 @@ iris-ztd = { workspace = true }
 iris-ztd-derive = { workspace = true }
 bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
 iris-crypto = { workspace = true }
-serde = { version = "1.0", features = ["derive"], default-features = false }
+serde = { workspace = true }
 thiserror = "2.0"
 ibig = { workspace = true }
 hex = "0.4"
