--- a/crates/iris-wasm/Cargo.toml
+++ b/crates/iris-wasm/Cargo.toml
@@ -21,7 +21,7 @@ iris-ztd = { workspace = true }
 iris-grpc-proto = { workspace = true }
 ibig = { workspace = true }
 bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
-serde = { version = "1.0", features = ["derive"] }
+serde = { workspace = true }
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 js-sys = "0.3"
