--- a/crates/iris-ztd/Cargo.toml
+++ b/crates/iris-ztd/Cargo.toml
@@ -15,11 +15,6 @@ authors = ["NockBox inc. <tech@nockbox.org>"]
 bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
 bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
 ibig = { workspace = true }
-once_cell = "1.21"
 arrayref = "0.3"
 num-traits = { version = "0.2", default-features = false }
-serde = { version = "1.0", features = ["derive"], default-features = false }
-
-[features]
-default = ["std"]
-std = ["serde/std"]
+serde = { workspace = true }
