--- a/crates/iris-crypto/Cargo.toml
+++ b/crates/iris-crypto/Cargo.toml
@@ -13,3 +13,6 @@ hmac = "0.12"
 sha2 = "0.10"
 bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
 serde = { version = "1.0", features = ["derive"] }
+
+[dev-dependencies]
+hex = "0.4"
