--- a/crates/iris-grpc-proto/Cargo.toml
+++ b/crates/iris-grpc-proto/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "iris-grpc-proto"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 keywords = ["nockchain", "iris", "wallet", "nock"]
 license = "MIT"
 repository = "https://github.com/nockbox/iris-rs"
@@ -20,6 +20,8 @@ tonic = { version = "0.12", default-features = false, features = ["codegen", "pr
 thiserror = "2.0"
 bip39 = "2.2.0"
 serde = { version = "1.0", features = ["derive"] }
+ibig = { workspace = true }
+iris-crypto = { path = "../iris-crypto" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tonic = { version = "0.12", features = ["transport"] }
@@ -27,6 +29,7 @@ tonic = { version = "0.12", features = ["transport"] }
 [dev-dependencies]
 iris-crypto = { path = "../iris-crypto" }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+serde_json = "1"
 
 [build-dependencies]
 glob = "0.3"
