--- a/crates/iris-nockchain-types/Cargo.toml
+++ b/crates/iris-nockchain-types/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "iris-nockchain-types"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 keywords = ["nockchain", "iris", "wallet", "nock"]
 license = "MIT"
 repository = "https://github.com/nockbox/iris-rs"
@@ -20,3 +20,4 @@ iris-crypto = { path = "../iris-crypto" }
 serde = { version = "1.0", features = ["derive"], default-features = false }
 thiserror = "2.0"
 ibig = { workspace = true }
+hex = "0.4"
