--- a/crates/iris-ztd-derive/Cargo.toml
+++ b/crates/iris-ztd-derive/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "iris-ztd-derive"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 keywords = ["nockchain", "iris", "wallet", "nock"]
 license = "MIT"
 repository = "https://github.com/nockbox/iris-rs"
