--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [workspace]
 members = [
-  "crates/iris-wallet",
   "crates/iris-ztd",
   "crates/iris-crypto",
   "crates/iris-nockchain-types",
   "crates/iris-grpc-proto",
   "crates/iris-wasm",
+  "crates/iris-ztd-derive",
 ]
 
 resolver = "2"
@@ -43,4 +43,5 @@ version = "0.1"
 nockvm = { git = "https://github.com/zorp-corp/nockchain.git" }
 nockchain-math = { git = "https://github.com/zorp-corp/nockchain.git" }
 ibig = { version = "0.3", default-features = false, features = ["num-traits"] }
+crypto-bigint = { version = "0.6", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
