--- a/crates/iris-ztd/Cargo.toml
+++ b/crates/iris-ztd/Cargo.toml
@@ -15,6 +15,7 @@ authors = ["NockBox inc. <tech@nockbox.org>"]
 bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
 bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
 ibig = { workspace = true }
+crypto-bigint = { workspace = true }
 arrayref = "0.3"
 num-traits = { version = "0.2", default-features = false }
 serde = { workspace = true }
