--- a/crates/iris-grpc-proto/Cargo.toml
+++ b/crates/iris-grpc-proto/Cargo.toml
@@ -21,7 +21,7 @@ thiserror = "2.0"
 bip39 = "2.2.0"
 serde = { workspace = true }
 ibig = { workspace = true }
-iris-crypto = { path = "../iris-crypto" }
+iris-crypto = { workspace = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tonic = { version = "0.12", features = ["transport"] }
