Unify ZMap + ZSet, stop using vecs in representations

--- a/crates/iris-ztd/Cargo.toml
+++ b/crates/iris-ztd/Cargo.toml
@@ -19,3 +19,4 @@ crypto-bigint = { workspace = true }
 arrayref = "0.3"
 num-traits = { version = "0.2", default-features = false }
 serde = { workspace = true }
+iris-ztd-derive = { workspace = true }
