--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,4 +44,4 @@ nockvm = { git = "https://github.com/zorp-corp/nockchain.git" }
 nockchain-math = { git = "https://github.com/zorp-corp/nockchain.git" }
 ibig = { version = "0.3", default-features = false, features = ["num-traits"] }
 crypto-bigint = { version = "0.6", default-features = false, features = ["serde"] }
-serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
+serde = { version = "1.0", default-features = false, features = ["derive"] }
