--- a/crates/iris-ztd/Cargo.toml
+++ b/crates/iris-ztd/Cargo.toml
@@ -12,11 +12,15 @@ homepage = "https://nockbox.org"
 authors = ["NockBox inc. <tech@nockbox.org>"]
 
 [dependencies]
-bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
-bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
+bs58 = { version = "0.5", default-features = false }
+bitvec = { version = "1.0", default-features = false }
 ibig = { workspace = true }
 crypto-bigint = { workspace = true }
 arrayref = "0.3"
 num-traits = { version = "0.2", default-features = false }
 serde = { workspace = true }
 iris-ztd-derive = { workspace = true }
+
+[features]
+default = ["alloc"]
+alloc = ["bs58/alloc", "bitvec/alloc", "serde/alloc"]
