--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ edition = "2021"
 [workspace.dependencies.iris-ztd]
 path = "crates/iris-ztd"
 version = "0.2.0-alpha.0"
+default-features = false
 
 [workspace.dependencies.iris-ztd-derive]
 path = "crates/iris-ztd-derive"
@@ -25,6 +26,7 @@ version = "0.2.0-alpha.0"
 [workspace.dependencies.iris-crypto]
 path = "crates/iris-crypto"
 version = "0.2.0-alpha.0"
+default-features = false
 
 
 [workspace.dependencies.iris-nockchain-types]
