--- a/crates/iris-crypto/Cargo.toml
+++ b/crates/iris-crypto/Cargo.toml
@@ -5,14 +5,14 @@ edition.workspace = true
 keywords = ["nockchain", "iris", "wallet", "nock"]
 license = "MIT"
 repository = "https://github.com/nockbox/iris-rs"
-rust-version = "1.85.0"
+rust-version = "1.88.0"
 description = "Cryptographic primitives for Iris Nockchain Wallet"
 documentation = "https://docs.rs/iris-crypto"
 homepage = "https://nockbox.org"
 authors = ["NockBox inc. <tech@nockbox.org>"]
 
 [dependencies]
-iris-ztd = { workspace = true, default-features = false }
+iris-ztd = { workspace = true }
 iris-ztd-derive = { workspace = true }
 ibig = { workspace = true }
 bip39 = { version = "2.0", default-features = false, features = [], optional = true }
