--- a/crates/iris-nockchain-types/Cargo.toml
+++ b/crates/iris-nockchain-types/Cargo.toml
@@ -5,7 +5,7 @@ edition.workspace = true
 keywords = ["nockchain", "iris", "wallet", "nock"]
 license = "MIT"
 repository = "https://github.com/nockbox/iris-rs"
-rust-version = "1.85.0"
+rust-version = "1.88.0"
 description = "Nockchain types for Iris wallet"
 documentation = "https://docs.rs/iris-nockchain-types"
 homepage = "https://nockbox.org"
@@ -13,10 +13,10 @@ authors = ["NockBox inc. <tech@nockbox.org>"]
 
 [dependencies]
 bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
-iris-ztd = { workspace = true }
+iris-ztd = { workspace = true, features = ["default"] }
 iris-ztd-derive = { workspace = true }
 bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
-iris-crypto = { workspace = true }
+iris-crypto = { workspace = true, features = ["default"] }
 serde = { workspace = true }
 thiserror = "2.0"
 ibig = { workspace = true }
