--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,15 @@ version = "0.2.0-alpha.0"
 path = "crates/iris-grpc-proto"
 version = "0.2.0-alpha.0"
 
+# Commonly used deps for wasm bindings generation
+[workspace.dependencies.tsify]
+version = "0.5"
+default-features = false
+features = ["js"]
+
+[workspace.dependencies.wasm-bindgen]
+version = "0.2"
+
 [workspace.dependencies]
 nockvm = { git = "https://github.com/zorp-corp/nockchain.git" }
 nockchain-math = { git = "https://github.com/zorp-corp/nockchain.git" }
