--- a/crates/iris-wasm/Cargo.toml
+++ b/crates/iris-wasm/Cargo.toml
@@ -15,14 +15,14 @@ authors = ["NockBox inc. <tech@nockbox.org>"]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-iris-crypto = { workspace = true, features = ["default"] }
-iris-nockchain-types = { workspace = true }
-iris-ztd = { workspace = true, features = ["default"] }
+iris-crypto = { workspace = true, features = ["default", "wasm"] }
+iris-nockchain-types = { workspace = true, features = ["wasm"] }
+iris-ztd = { workspace = true, features = ["default", "wasm"] }
 iris-grpc-proto = { workspace = true }
 ibig = { workspace = true }
 bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
 serde = { workspace = true }
-wasm-bindgen = "0.2"
+wasm-bindgen.workspace = true
 wasm-bindgen-futures = "0.4"
 js-sys = "0.3"
 serde-wasm-bindgen = "0.6"
