--- a/crates/iris-grpc-proto/Cargo.toml
+++ b/crates/iris-grpc-proto/Cargo.toml
@@ -22,6 +22,8 @@ bip39 = "2.2.0"
 serde = { workspace = true }
 ibig = { workspace = true }
 iris-crypto = { workspace = true }
+tsify = { workspace = true, optional = true }
+wasm-bindgen = { workspace = true, optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tonic = { version = "0.12", features = ["transport"] }
@@ -35,3 +37,6 @@ serde_json = "1"
 glob = "0.3"
 prost-build = "0.13"
 tonic-build = "0.12"
+
+[features]
+wasm = ["iris-ztd/wasm", "iris-nockchain-types/wasm", "tsify", "wasm-bindgen"]
