--- a/crates/iris-wasm/Cargo.toml
+++ b/crates/iris-wasm/Cargo.toml
@@ -18,10 +18,11 @@ crate-type = ["cdylib", "rlib"]
 iris-crypto = { workspace = true, features = ["default", "wasm"] }
 iris-nockchain-types = { workspace = true, features = ["wasm"] }
 iris-ztd = { workspace = true, features = ["default", "wasm"] }
-iris-grpc-proto = { workspace = true }
+iris-grpc-proto = { workspace = true, features = ["wasm"] }
 ibig = { workspace = true }
 bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
 serde = { workspace = true }
+tsify = { workspace = true }
 wasm-bindgen.workspace = true
 wasm-bindgen-futures = "0.4"
 js-sys = "0.3"
