--- a/.github/workflows/wasm-build.yml
+++ b/.github/workflows/wasm-build.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install Rust
-      uses: dtolnay/rust-toolchain@1.88.0
+      uses: dtolnay/rust-toolchain@1.91.0
       with:
         targets: wasm32-unknown-unknown
 
@@ -45,7 +45,7 @@ jobs:
 
     - name: Test typescript
       working-directory: crates/iris-wasm
-      run: npx --no-install --yes -p typescript tsc --noEmit pkg/iris_wasm.guard.ts
+      run: npx --no-install --yes -p typescript@^5.2.0 tsc --noEmit -p .
 
     - name: Validate npm package
       working-directory: crates/iris-wasm/pkg
