--- a/crates/iris-wasm/Cargo.toml
+++ b/crates/iris-wasm/Cargo.toml
@@ -31,3 +31,7 @@ web-sys = { version = "0.3", features = ["console"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.2", features = ["js"] }
+
+[features]
+default = ["private-api"]
+private-api = ["iris-grpc-proto/private-api"]
