Enable server compilation

--- a/crates/iris-grpc-proto/Cargo.toml
+++ b/crates/iris-grpc-proto/Cargo.toml
@@ -42,3 +42,4 @@ tonic-build = "0.12"
 [features]
 wasm = ["iris-ztd/wasm", "iris-nockchain-types/wasm", "tsify", "wasm-bindgen"]
 private-api = []
+server = ["tonic/server", "tonic/transport"]
