--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,41 +11,41 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "0.2.0-alpha.2"
+version = "0.2.0-alpha.3"
 edition = "2021"
 
 [workspace.dependencies.iris-ztd]
 path = "crates/iris-ztd"
-version = "0.2.0-alpha.2"
+version = "0.2.0-alpha.3"
 default-features = false
 
 [workspace.dependencies.iris-ztd-derive]
 path = "crates/iris-ztd-derive"
-version = "0.2.0-alpha.2"
+version = "0.2.0-alpha.3"
 
 [workspace.dependencies.iris-crypto]
 path = "crates/iris-crypto"
-version = "0.2.0-alpha.2"
+version = "0.2.0-alpha.3"
 default-features = false
 
 
 [workspace.dependencies.iris-nockchain-types]
 path = "crates/iris-nockchain-types"
-version = "0.2.0-alpha.2"
+version = "0.2.0-alpha.3"
 
 [workspace.dependencies.iris-wasm]
 path = "crates/iris-wasm"
-version = "0.2.0-alpha.2"
+version = "0.2.0-alpha.3"
 
 [workspace.dependencies.iris-grpc-proto]
 path = "crates/iris-grpc-proto"
-version = "0.2.0-alpha.2"
+version = "0.2.0-alpha.3"
 
 # Commonly used deps for wasm bindings generation
 [workspace.dependencies.tsify]
 version = "0.5"
 default-features = false
-features = ["js"]
+features = ["json"]
 
 [workspace.dependencies.wasm-bindgen]
 version = "0.2"
@@ -55,4 +55,5 @@ nockvm = { git = "https://github.com/zorp-corp/nockchain.git" }
 nockchain-math = { git = "https://github.com/zorp-corp/nockchain.git" }
 ibig = { version = "0.3", default-features = false, features = ["num-traits"] }
 crypto-bigint = { version = "0.6", default-features = false, features = ["serde"] }
+serdect = { version = "0.3", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
