--- a/crates/iris-crypto/Cargo.toml
+++ b/crates/iris-crypto/Cargo.toml
@@ -24,13 +24,16 @@ serde = { workspace = true }
 arrayvec = "0.7"
 tsify = { workspace = true, optional = true }
 wasm-bindgen = { workspace = true, optional = true }
+crypto-bigint.workspace = true
+serdect.workspace = true
 
 [dev-dependencies]
 hex = "0.4"
+serde_json = { version = "1", default-features = false, features = ["alloc"] }
 
 [features]
 default = ["alloc", "argon2", "mnemonic"]
-alloc = ["iris-ztd/alloc", "argon2/alloc", "bip39/alloc", "serde/alloc", "bs58/alloc"]
+alloc = ["iris-ztd/alloc", "argon2/alloc", "bip39/alloc", "serde/alloc", "bs58/alloc", "serdect/alloc"]
 argon2 = ["dep:argon2", "alloc"]
 mnemonic = ["dep:bip39", "alloc"]
 wasm = ["iris-ztd/wasm", "tsify", "wasm-bindgen"]
